# gems

./: .gitignore  CMakeLists.txt  Gemfile  README.md  _config.yml  index.md
cmake/: GLM.cmake
resources/: index.md
source/: main.cpp
source/animation/jimmy-neutron/: CMakeLists.txt  index.md  main.cpp  shader.h
source/animation/jimmy-neutron/shaders/: frag.glsl
source/animation/minion/: CMakeLists.txt  index.md  main.cpp
source/animation/minion/shaders/: frag.glsl
source/example/: CMakeLists.txt  README.md
source/example/cmake/: GLEW.cmake  GLFW.cmake  IMGUI.cmake  STB.cmake
source/example/shaders/: frag.glsl  vert.glsl
source/example/src/: main.cpp
source/image-processing/motion-blur/: CMakeLists.txt  index.md
source/natural/: index.md
source/natural/caustics/: CMakeLists.txt  gui.cpp  gui.h  index.md  main.cpp  shader.cpp  window.cpp  window.h
source/natural/caustics/shaders/: frag.glsl
source/natural/cloth/: shader.h  window.cpp  window.h
source/physics/wormhole/: index.md
